<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/nfc_control"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NfcControl"
        style="@style/CustomText" />
	<TextView
	    android:id="@+id/nfc_status"
	    android:text="@string/unlock"
	   	style="@style/CustomStatus" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <Button
        android:id="@+id/nfc_on"
        android:text="@string/on"
        style="@style/CustomButton" />
    <Button
        android:id="@+id/nfc_off"
        android:text="@string/off"
        style="@style/CustomButton" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <Button
        android:id="@+id/nfc_lock"
        android:text="@string/nfc_lock"
        style="@style/CustomButton" />
    <Button
        android:id="@+id/nfc_unlock"
        android:text="@string/nfc_unlock"
        style="@style/CustomButton" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    <Button
        android:id="@+id/nfc_test1"
        android:text="@string/nfc_test1"
        style="@style/CustomButton" />
    <Button
        android:id="@+id/nfc_test2"
        android:text="@string/nfc_test2"
        style="@style/CustomButton" />
</LinearLayout>

</LinearLayout>
